@@ -214,7 +214,7 @@ newState c r = do
 new :: Git.Repo -> IO AnnexState
 new r = do
 	r' <- Git.Config.read =<< Git.relPath r
-	let c = extractGitConfig r'
+	let c = extractGitConfig FromGitConfig r'
 	newState c =<< fixupRepo r' c
 
 {- Performs an action in the Annex monad from a starting state,
@@ -325,7 +325,7 @@ changeGitRepo r = do
 	r' <- liftIO $ adjuster r
 	changeState $ \s -> s
 		{ repo = r'
-		, gitconfig = extractGitConfig r'
+		, gitconfig = extractGitConfig FromGitConfig r'
 		}
 
 {- Adds an adjustment to the Repo data. Adjustments persist across reloads
