@@ -1,6 +1,6 @@
 {- git-annex configuration
  -
- - Copyright 2017 Joey Hess <id@joeyh.name>
+ - Copyright 2017-2019 Joey Hess <id@joeyh.name>
  -
  - Licensed under the GNU AGPL version 3 or higher.
  -}
@@ -20,20 +20,21 @@ import Logs.Config
  - Note: Be sure to add the config value to mergeGitConfig.
  -}
 getGitConfigVal :: (GitConfig -> Configurable a) -> Annex a
-getGitConfigVal f = do
-	v <- f <$> Annex.getGitConfig
-	case v of
-		HasConfig c -> return c
-		DefaultConfig _ -> do
-			r <- Annex.gitRepo
-			m <- loadGlobalConfig
-			let globalgc = extractGitConfig (r { config = m })
-			-- This merge of the repo-global config and the git
-			-- config makes all repository-global default
-			-- values populate the GitConfig with HasConfig
-			-- values, so it will only need to be done once.
-			Annex.changeGitConfig (\gc -> mergeGitConfig gc globalgc)
-			v' <- f <$> Annex.getGitConfig
-			case v' of
-				HasConfig c -> return c
-				DefaultConfig d -> return d
+getGitConfigVal f = getGitConfigVal' f >>= \case
+	HasGlobalConfig c -> return c
+	DefaultConfig d -> return d
+	HasGitConfig c -> return c
+
+getGitConfigVal' :: (GitConfig -> Configurable a) -> Annex (Configurable a)
+getGitConfigVal' f = (f <$> Annex.getGitConfig) >>= \case
+	DefaultConfig _ -> do
+		r <- Annex.gitRepo
+		m <- loadGlobalConfig
+		let globalgc = extractGitConfig FromGlobalConfig (r { config = m })
+		-- This merge of the repo-global config and the git
+		-- config makes all repository-global default
+		-- values populate the GitConfig with HasGlobalConfig
+		-- values, so it will only need to be done once.
+		Annex.changeGitConfig (\gc -> mergeGitConfig gc globalgc)
+		f <$> Annex.getGitConfig
+	c -> return c
