@@ -27,6 +27,15 @@ repository see the setting, and so git-annex only looks for these:
 These settings can be overridden on a per-repository basis using
 `git config`.
 
+* `annex.largefiles`
+
+   Used to configure which files are large enough to be added to the annex.
+   It is an expression that matches the large files, eg
+   "*.mp3 or largerthan(500kb)"
+
+   This sets a default, which can be overridden by annex.largefiles
+   attributes in `.gitattributes` files, or by `git config`.
+
 * `annex.autocommit`
 
   Set to false to prevent the `git-annex assistant` and `git-annex sync`
