@@ -7,6 +7,10 @@ git-annex (7.20191219) UNRELEASED; urgency=medium
   * Added build dependency on the filepath-bytestring library.
   * Fixed an oversight that had always prevented annex.resolvemerge
     from being honored, when it was configured by git-annex config.
+  * annex.largefiles can be configured by git-annex config,
+    to more easily set a default that will also be used by clones,
+    without needing to shoehorn the expression into the gitattributes file.
+    The git config and gitattributes override that.
 
  -- Joey Hess <id@joeyh.name>  Wed, 18 Dec 2019 15:12:40 -0400
 
